--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
+@import "../../node_modules/@fortawesome/fontawesome-free/css/all.css";
 // Variables
 @import 'variables';
 
